--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "econsulte/whatsapp-business-php-sdk",
     "type": "sdk",
     "require": {
-        "guzzlehttp/guzzle": "7.5"
+        "guzzlehttp/guzzle": "^7.5.0"
     },
     "autoload": {
         "psr-4": {
